--- a/__config.yml
+++ b/__config.yml
@@ -1,10 +1,8 @@
 title: Texture Theme
 author: GitHub User
-email: your-email@domain.com
+email: matthewpoestreich@gmail.com
 description: > # this means to ignore newlines until "show_exerpts:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Matt Oestreich - Starving Tech Artist
 show_excerpts: true # set to true to show excerpts on the homepage
 # baseurl: /texture
 
@@ -15,8 +13,8 @@ sass:
 
 permalink: /posts/:title/
 texture:
-  title: Adam Denisov
-  tagline: Developer. Designer
+  title: Matt Oestreich
+  tagline: Technology. Development.
   date_format: "%b %-d, %Y"
   style: black
   showNav: false
@@ -24,10 +22,8 @@ texture:
 
   # generate social links in footer
   social_links:
-    twitter: thelehhman
-    github:  thelehhman
-    linkedIn: in/thelehhman
-    rss: rss
+    github:  oze4
+    linkedIn: in/matt-oestreich-99251862
  
 
 # If you want to link only specific pages in your header, uncomment
