--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Texture Theme
 author: GitHub User
 email: matthewpoestreich@gmail.com
 description: > # this means to ignore newlines until "show_exerpts:"
-  Matt Oestreich - Starving Tech Artist
+  Matt Oestreich
 show_excerpts: true # set to true to show excerpts on the homepage
 # baseurl: /texture
 
