--- a/_config.yml
+++ b/_config.yml
@@ -17,8 +17,8 @@ texture:
   tagline: Technology. Development.
   date_format: "%b %-d, %Y"
   style: black
-  showNav: false
-  showPicker: true
+  showNav: true
+#  showPicker: true
 
   # generate social links in footer
   social_links:
@@ -36,4 +36,4 @@ texture:
 
 plugins:
   - jekyll-seo-tag
-#  - jekyll-feed
+  - jekyll-feed
