--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ texture:
   date_format: "%b %-d, %Y"
   style: black
   showNav: true
-#  showPicker: true
+  showPicker: true
 
   # generate social links in footer
   social_links:
@@ -28,8 +28,8 @@ texture:
 
 # If you want to link only specific pages in your header, uncomment
 # this and add the path to the pages in order as they should show up
-#header_pages:
-# - about.md
+header_pages:
+ - about.md
 
 # Build settings
 # theme: texture
