--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ texture:
   title: Matt Oestreich
   tagline: Technology. Development.
   date_format: "%b %-d, %Y"
-  style: black
+  #style: black
   showNav: true
   showPicker: true
 
