--- a/_config.yml
+++ b/_config.yml
@@ -18,6 +18,11 @@ texture:
   date_format: "%b %-d, %Y"
   style: black
   showNav: true
+  navigation:
+    - title: About Me
+      url: "/my-work"
+    - title: Resume
+      url: "/resume"
   showPicker: false
 
   # generate social links in footer
@@ -29,8 +34,8 @@ texture:
 
 # If you want to link only specific pages in your header, uncomment
 # this and add the path to the pages in order as they should show up
-header_pages:
- - about.md
+#header_pages:
+# - about.md
 
 # Build settings
 # theme: texture
