--- a/_config.yml
+++ b/_config.yml
@@ -12,8 +12,8 @@ show_excerpts: true # set to true to show excerpts on the homepage
 sass:
   sass_dir: _sass
 plainwhite:
-  name: Adam Denisov
-  tagline: Developer. Designer
+  name: Matt Oestreich
+  tagline: Technology. Development.
   date_format: "%b %-d, %Y"
   sitemap: true # set to true to generate sitemap.xml content
   search: true # set to true to enable searchbar
@@ -23,9 +23,8 @@ plainwhite:
 
   # generate social links in footer
   social_links:
-    twitter: samarsault
-    github:  samarsault
-    linkedIn: in/samarsault
+    github:  oze4
+    linkedIn: in/matt-oestreich-99251862
     #rss: rss
     #dribbble: jekyll
     #flickr:   jekyll
