--- a/_config.yml
+++ b/_config.yml
@@ -23,6 +23,7 @@ plainwhite:
   social_links:
     github:  oze4
     linkedIn: in/matt-oestreich-99251862
+    stackoverflow: 10431732
     #rss: rss
     #dribbble: jekyll
     #flickr:   jekyll
