--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Matt Oestreich
-author: oze4
+author: Matt Oestreich
 email: matthewpoestreich@gmail.com
 description: > # this means to ignore newlines until "show_exerpts:"
   Matt Oestreich rants about technology & development.
